[package]
name = "fallout-shelter-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.70"
base64 = "0.21.0"
cbc = "0.1.2"
chrono = { version = "0.4.24", features = ["serde"] }
eframe = { version = "0.21.3", features = ["persistence"] }
egui_extras = "0.21.0"
pbkdf2 = "0.12.1"
rfd = "0.11.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_repr = "0.1.12"
sha1 = "0.10.5"
